# XAI-kit

./: .gitignore  .gitmodules  README.md  Tutorial_INVICTA_Spring_School_2024.ipynb  Tutorial_Introduction_to_AI_Interpretability_Course_2022.ipynb  Tutorial_Usage_to_CLIP.ipynb  Tutorial_Usage_to_Captum_GPT2.ipynb  main.py  pyproject.toml
examples/: probe_clip_text_attention_layers_example.py  probe_clip_vision_attention_layers_example.py
scripts/: run_causal.py  run_circuit.py  run_cluster.py  run_fit.py  run_target_causal.py  run_trace.py
src/clip_circuit/: gate_cluster.py  graph_builder.py  hooks.py  intervene.py  local_linear.py  target_causal.py
tests/clip_circuit/: test_gate_cluster.py  test_graph_builder.py  test_hooks.py  test_intervene.py  test_local_linear.py  test_run_trace.py  test_target_causal.py
